--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             div { background-color: bisque; text-align: left; }
             p {color: #641f1f; font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: large;}
             img {border-color: black; border-style: solid; border-width: 1px;}
-            ul {align: left; font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: large; color: #641f1f;}
+            ul {align: left; font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: large; color: #24c216;}
         </style>
 </head>
 
@@ -22,7 +22,7 @@
             Här har man hängt för fisket sen man var yngre, inga rekordfiskar men det finns alternativ att fiska i och naturen är fin.
             </p>
                 <p>
-                    Erfarenhet av programmering var ett bra tag sen. Det senaste jag har gjort är HTML i 2 år för vår bostadsförenings hemsida (webbeditor), men det ska det bli ändring på.<br>
+                    Erfarenhet av programmering var ett bra tag sen. Det senaste jag har gjort är HTML i 2 år för vår bostadsförening(webbeditor), men det ska det bli ändring på.<br>
                     Mitt intresse var mestadels webbdesign och "jobbade" en del i bildredigeringsprogram. Det jag upplevde mest roligast var kopplingen mellan hemsida och en databas (MySQL) med hjälp av ASP. Utbildningen var i Varberg på två år (LBS - YH - Intranetutvecklare)
                 </p>
                     <ul>
