--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div>
         <h1>Olsfors</h1><br>
     <img src="olsfors.jpg" alt="Sjö" width="900"> <!-- Denna bild är min egna -->
-            <p>Det här är orten Olsfors. Den ligger mellan Borås - Göteborg. Det som finns här är en blomsteraffär och en kyrka i stort sett.<br>
+            <p>Det här är orten Olsfors, den ligger mellan Borås - Göteborg. Det som finns här är en blomsteraffär och en kyrka i stort sett.<br>
             Här har man hängt för fisket sen man var yngre, inga rekordfiskar men det finns alternativ att fiska i och naturen är fin.
             </p>
                 <p>
